--- a/app/src/main/res/layout/rooms_fragment.xml
+++ b/app/src/main/res/layout/rooms_fragment.xml
@@ -26,7 +26,7 @@
         tools:layout_editor_absoluteX="0dp" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnAddEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
