--- a/app/src/main/res/layout/fragment_people.xml
+++ b/app/src/main/res/layout/fragment_people.xml
@@ -6,8 +6,10 @@
     tools:context=".View.PeopleFragment">
 
     <TextView
+        android:id="@+id/tvTest"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Test text 2" />
+        android:text="Test text 222"
+        tools:ignore="InvalidId" />
 
 </FrameLayout>
