--- a/app/src/main/res/layout/rooms_fragment.xml
+++ b/app/src/main/res/layout/rooms_fragment.xml
@@ -35,12 +35,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/RoomsRecyclerView" />
 
-    <!--<LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/addRecord"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="end"
-        android:layout_marginEnd="10dp">
+        android:text="Добавить запись"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAddEvent"
+        tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/deleteRecord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Удалить запись"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/addRecord"
+        app:layout_constraintTop_toBottomOf="@+id/btnAddEvent" />
 
-    </LinearLayout>-->
+    <Button
+        android:id="@+id/addDeleteVoder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Добавить или удалить модератора"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addRecord" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
